Fix sidebar flickering in height when navigating quickly

--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -92,6 +92,7 @@ article > footer {
 .de-emphasize {
     color: rgba(17, 17, 17, 0.5);
 }
+
 .copyright {
     padding-bottom: 2rem;
     font-size: 1rem;
@@ -202,6 +203,7 @@ article > header > p {
 #asidebar #logo {
     text-align: center;
     margin-bottom: 2rem;
+    min-height: 123px;
 }
 
 #asidebar .main-menu ul {
@@ -266,6 +268,10 @@ article > header > p {
 @media screen and (max-width: 1200px) {
     main {
         padding-right: 0;
+    }
+
+    #asidebar #logo {
+        min-height: initial;
     }
 
     #asidebar #logo img {
